--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ color:red
        height="132">
  </p>
 <div class="center">
-<h1> srbee's pages  on GitHub   </h1>
+<h1> Desmos : Cloud Based Free Graphic Calculator   </h1>
 <hr>
 <h1> <a href="https://www.desmos.com/calculator/cb26qud6x8" > Lissajous Patterns   </a> </h1>   
 <hr> 
