--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
 <head>
-<title> srbee GitHub pages (websites) </title>
+<title>Desmos Graphic Calculator </title>
 <style>
 body{
 background-color:lightgreen;
