--- a/index.html
+++ b/index.html
@@ -25,3 +25,24 @@ color:red
 <h1> <a href="https://www.desmos.com/calculator/8nvigwe9bi" > DC Offset in Fault Current in Desmos  </a> </h1>  
 <hr>
 <h1> <a href="https://www.desmos.com/calculator/nb2arekjqg" > Unit Step Response of 2nd Order System in Desmos  </a> </h1> 
+<br>
+<hr> <hr>
+<br>
+<p id="demo"></p>
+
+<script>
+const date = new Date(document.lastModified);
+document.getElementById("demo").innerHTML = "Last Edited On: "+date;
+</script>  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
