--- a/index.html
+++ b/index.html
@@ -35,3 +35,5 @@ const date = new Date(document.lastModified);
 document.getElementById("demo").innerHTML = "Last Edited On: "+date;
 </script>  
   
+  </body>
+  </html>
